Bug ao validar thing (excluir)

--- a/backup.env
+++ b/backup.env
@@ -11,3 +11,4 @@ PASSWORD =
 # Configurações do aplicativo
 APP_NAME = API.Experiments
 DEFAULT_AVATAR = "https://randomuser.me/api/portraits/lego/5.jpg"
+DEFAULT_PHOTO = "https://picsum.photos/200"
